# be-systems-hiring-challenge

./: .dockerignore  .gitignore  Dockerfile.client  Dockerfile.context_check  Dockerfile.server  Makefile  README.md  RUN.md  controls.sh  datapane.proto  datapane_client.py  datapane_pb2.py  datapane_pb2_grpc.py  datapane_server.py  docker-compose.yaml  docker-compose.yml  dockerignore-check.sh  dockerignore-generate.sh  pyproject.toml
client/: Dockerfile  main.py
server/: Dockerfile  main.py
